src/test/resources/fail/Trait_01.groovy
package fail

trait Trait_01 {
    abstract m() {}
}
